--- a/TailWindProject2/output.css
+++ b/TailWindProject2/output.css
@@ -558,8 +558,20 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
 .m-3 {
   margin: 0.75rem;
+}
+
+.m-10 {
+  margin: 2.5rem;
 }
 
 .mx-1 {
@@ -594,12 +606,8 @@ video {
   margin-top: 0.5rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
-}
-
-.inline {
-  display: inline;
+.mt-0 {
+  margin-top: 0px;
 }
 
 .flex {
@@ -626,8 +634,41 @@ video {
   height: 2.25rem;
 }
 
-.h-20 {
-  height: 5rem;
+.h-52 {
+  height: 13rem;
+}
+
+.h-64 {
+  height: 16rem;
+}
+
+.h-1\/2 {
+  height: 50%;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-\[400px\] {
+  height: 400px;
+}
+
+.h-\[70\%\] {
+  height: 70%;
+}
+
+.h-4\/5 {
+  height: 80%;
+}
+
+.max-h-full {
+  max-height: 100%;
 }
 
 .w-1\/6 {
@@ -648,6 +689,10 @@ video {
 
 .w-3\/12 {
   width: 25%;
+}
+
+.w-5\/12 {
+  width: 41.666667%;
 }
 
 .w-5\/6 {
@@ -675,24 +720,32 @@ video {
   width: 100vw;
 }
 
-.w-5\/12 {
-  width: 41.666667%;
+.w-56 {
+  width: 14rem;
 }
 
-.w-1\/2 {
-  width: 50%;
+.w-\[70\%\] {
+  width: 70%;
 }
 
-.w-1\/12 {
-  width: 8.333333%;
+.w-\[30\%\] {
+  width: 30%;
 }
 
-.w-6\/12 {
-  width: 50%;
+.w-2\/5 {
+  width: 40%;
 }
 
-.w-16 {
-  width: 4rem;
+.w-3\/5 {
+  width: 60%;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.max-w-xl {
+  max-width: 36rem;
 }
 
 .cursor-text {
@@ -747,6 +800,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -761,14 +818,14 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-blue-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
 
 .bg-blue-300 {
@@ -776,36 +833,17 @@ video {
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
 }
 
-.bg-blue-500 {
+.bg-green-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
-}
-
-.bg-cyan-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(6 182 212 / var(--tw-bg-opacity));
-}
-
-.bg-gray-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-5 {
-  padding: 1.25rem;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
 .p-4 {
   padding: 1rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
 }
 
 .px-3 {
@@ -845,6 +883,10 @@ video {
   padding-top: 5rem;
 }
 
+.pt-16 {
+  padding-top: 4rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -864,6 +906,12 @@ video {
 
 .font-extrabold {
   font-weight: 800;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .focus\:border-gray-800:focus {
